--- a/Styles/_custom.scss
+++ b/Styles/_custom.scss
@@ -43,6 +43,7 @@ nav{
     li{
         padding: 0 0.75rem;
         font-size: 18px;
+        
     }
     
     .btn-rounded{ 
@@ -52,6 +53,12 @@ nav{
         background-color: rgba($gray-800, 0.8);
         color: $white;
         font-size: 18px;
+        display: block;
+        
+    }
+
+    a{
+        text-decoration: none; 
     }
 }
 
